config paraser